UnregisteredClassesTable_lock never created

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 21
    • Affects Version/s: 21
    • Component/s: hotspot
    • b18

      https://github.com/openjdk/jdk/pull/13143 discovered that UnregisteredClassesTable_lock is never created in mutex_init() and is always nullptr. This lock is referenced in a few places and all of those are effectively thread unsafe. The lock should be removed if not needed or actually created.

            Assignee:
            Matias Saavedra Silva
            Reporter:
            Justin King
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: