8304738: UnregisteredClassesTable_lock never created